--- a/multi_final/front/workspace_react/src/components/main/css/MainBottomNavber.scss
+++ b/multi_final/front/workspace_react/src/components/main/css/MainBottomNavber.scss
@@ -7,6 +7,7 @@ div.bottomNavber {
   background-color: #5c5e5e;
   color: $text-Color; 
   margin-top: 100px;
+  min-width: 1024px;
 }
 #link1 {
   width: 500px;
